# klustra

./: CLAUDE.md  README.md  SPEC.md  STATUS.md  main.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: format.sh  verify.sh
.github/workflows/: python-publish.yml
.smoke_project/: klustra.toml
.smoke_project/.klustra/: state.json
.smoke_project/corpus/: cable_intro.md  safety_standards.md  supplier_list.txt  xlpe_material.md
.smoke_project/vault_out/: accessory_suppliers_hv_cables.md  after_installation_testing.md  approved_supplier_list_hv_cable_components.md  arkema_aluminium_pe_laminate_tape.md  aurubis_ag.md  aurubis_copper_rod.md  backfill.md  borealis_visico_le4253.md  borealis_visico_le4253_xlpe.md  cable_core.md  cable_core_components.md  cable_fault_emergency_procedure.md  cable_isolation_and_earthing.md  cable_lubricant.md  cable_winch_tension_monitoring.md  company_specific_safety_procedures.md  conductor_resistance_check.md  conductor_suppliers_hv_cables.md  cross_linked_polyethylene_insulation.md  dc_vlf_withstand_testing.md  design_lifetime.md  dielectric_loss.md  dielectric_strength.md  direct_burial.md  dow_chemical_hfda_4202_ec.md  dow_hfda_4202_ec_xlpe.md  duct_installation.md  electrical_treeing.md  exxonmobil_hdpe_compound.md  exxonmobil_hdpe_sheathing.md  fault_exclusion_zone.md  high_voltage_cable_systems.md  high_voltage_withstand_test.md  hv_cable_after_installation_testing.md  hv_cable_applications.md  hv_cable_direct_burial_installation.md  hv_cable_duct_installation_process.md  hv_cable_emergency_procedures.md  hv_cable_installation_bending_radius.md  hv_cable_installation_pulling_tension.md  (+51 more)
docs/: ARCHITECTURE.md
klustra/: __init__.py  api.py  cli.py  logging_setup.py
klustra/core/: __init__.py  changeset.py  config.py  errors.py  file_state_store.py  knowledge_unit.py  page.py  source_ref.py  state_store.py
klustra/engine/: __init__.py  chunking.py  dependency.py  extraction.py  librarian.py  lint.py  models.py  validate.py
klustra/exporters/: __init__.py  exporter.py  obsidian.py  okf_bundle.py
klustra/hierarchy/: __init__.py  clustering.py  context.py  embeddings.py  incremental.py  pages.py  stability.py
klustra/ingestion/: __init__.py  connectors.py  domain_registry.py  source_manager.py  translator.py  translator_registry.py
klustra/linking/: __init__.py  link_graph.py  resolver.py
klustra/llm/: __init__.py  accounting.py  anthropic_provider.py  mock_provider.py  openai_provider.py  prompts.py  provider.py  retry.py  tokens.py
klustra/translators/: __init__.py  excel.py  markdown.py  registry.py  text.py
scripts/: smoke_pipeline.py
tests/: conftest.py  test_api.py  test_logging_setup.py
tests/test_core/: conftest.py  test_changeset.py  test_config.py  test_errors.py  test_file_state_store.py  test_knowledge_unit.py  test_page.py  test_source_ref.py  test_state_store.py
tests/test_engine/: conftest.py  test_chunking.py  test_dependency.py  test_extraction.py  test_librarian.py  test_lint.py  test_validate.py
tests/test_exporters/: conftest.py  test_obsidian.py  test_okf_bundle.py
tests/test_hierarchy/: conftest.py  test_clustering.py  test_context.py  test_embeddings.py  test_incremental.py  test_pages.py  test_stability.py
tests/test_ingestion/: conftest.py  test_domain_registry.py  test_source_manager.py  test_translator_registry.py
tests/test_integration/: test_cli_pipeline.py  test_golden.py  test_hierarchy_pipeline.py  test_logging.py  (+1 more)
(+298 files in other folders)
