[project]
name = "klustra"
version = "0.1.0"
description = "Recursive knowledge abstraction engine: heterogeneous files to OKF wiki to hierarchical cluster/home pages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "mypy>=1.13",
    "ruff>=0.8",
    "types-openpyxl>=3.1.5.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["klustra"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "klustra.core.*"
strict = true
